src/OcctNative/OcctOcaf.h

    OCCTBRIDGE_API int occt_ocaf_xde_set_material(OcctOcafHandle handle, const char* shapeEntry, const char* utf8Name, const char* utf8Description, double density, const char* utf8DensityName, const char* utf8DensityValueType);
    OCCTBRIDGE_API const char* occt_ocaf_xde_material_for_shape(OcctOcafHandle handle, const char* shapeEntry);
    OCCTBRIDGE_API int occt_ocaf_xde_material_snapshot(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_xde_material_name(OcctOcafHandle handle, const char* materialEntry);
    OCCTBRIDGE_API const char* occt_ocaf_xde_material_description(OcctOcafHandle handle, const char* materialEntry);
    OCCTBRIDGE_API double occt_ocaf_xde_material_density(OcctOcafHandle handle, const char* materialEntry);
    OCCTBRIDGE_API const char* occt_ocaf_xde_material_density_name(OcctOcafHandle handle, const char* materialEntry);
    OCCTBRIDGE_API const char* occt_ocaf_xde_material_density_value_type(OcctOcafHandle handle, const char* materialEntry);
    OCCTBRIDGE_API double occt_ocaf_xde_density_for_shape(OcctOcafHandle handle, const char* shapeEntry);
    OCCTBRIDGE_API const char* occt_ocaf_xde_material_at(OcctOcafHandle handle, int index);
    OCCTBRIDGE_API int occt_ocaf_xde_set_area(OcctOcafHandle handle, const char* shapeEntry, double area);
    OCCTBRIDGE_API int occt_ocaf_xde_get_area(OcctOcafHandle handle, const char* shapeEntry, double* area);
    OCCTBRIDGE_API int occt_ocaf_xde_set_volume(OcctOcafHandle handle, const char* shapeEntry, double volume);
    OCCTBRIDGE_API int occt_ocaf_xde_get_volume(OcctOcafHandle handle, const char* shapeEntry, double* volume);
    OCCTBRIDGE_API int occt_ocaf_xde_set_centroid(OcctOcafHandle handle, const char* shapeEntry, OcctPoint3d centroid);
    OCCTBRIDGE_API int occt_ocaf_xde_get_centroid(OcctOcafHandle handle, const char* shapeEntry, OcctPoint3d* centroid);
    // Metadata-preserving XDE exchange.
    OCCTBRIDGE_API int occt_ocaf_import_step(OcctOcafHandle handle, const char* utf8Path);
    OCCTBRIDGE_API int occt_ocaf_export_step(OcctOcafHandle handle, const char* utf8Path);
    OCCTBRIDGE_API int occt_ocaf_import_iges(OcctOcafHandle handle, const char* utf8Path);
    OCCTBRIDGE_API int occt_ocaf_export_iges(OcctOcafHandle handle, const char* utf8Path);