src/OcctNet/OcafNativeMethods.Xde.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern int occt_ocaf_xde_set_material(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string shapeEntry, [MarshalAs(UnmanagedType.LPUTF8Str)] string name, [MarshalAs(UnmanagedType.LPUTF8Str)] string description, double density, [MarshalAs(UnmanagedType.LPUTF8Str)] string densityName, [MarshalAs(UnmanagedType.LPUTF8Str)] string densityValueType);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr occt_ocaf_xde_material_for_shape(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string shapeEntry);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern int occt_ocaf_xde_material_snapshot(IntPtr handle);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr occt_ocaf_xde_material_name(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string materialEntry);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr occt_ocaf_xde_material_description(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string materialEntry);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern double occt_ocaf_xde_material_density(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string materialEntry);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr occt_ocaf_xde_material_density_name(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string materialEntry);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr occt_ocaf_xde_material_density_value_type(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string materialEntry);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern double occt_ocaf_xde_density_for_shape(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string shapeEntry);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr occt_ocaf_xde_material_at(IntPtr handle, int index);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern int occt_ocaf_xde_set_area(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string shapeEntry, double area);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern int occt_ocaf_xde_get_area(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string shapeEntry, out double area);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern int occt_ocaf_xde_set_volume(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string shapeEntry, double volume);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern int occt_ocaf_xde_get_volume(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string shapeEntry, out double volume);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern int occt_ocaf_xde_set_centroid(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string shapeEntry, OcctPoint3d centroid);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern int occt_ocaf_xde_get_centroid(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string shapeEntry, out OcctPoint3d centroid);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern int occt_ocaf_import_step(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern int occt_ocaf_export_step(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern int occt_ocaf_import_iges(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)] internal static extern int occt_ocaf_export_iges(IntPtr handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);
}
